Updated build your event store to Java 22 and the latest gradle