@@ -11,39 +11,29 @@ repositories {
 
 dependencies {
   // Serialisation
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
-  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2'
+  implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
 
   // Postgres client
-  implementation 'org.postgresql:postgresql:42.5.0'
+  implementation 'org.postgresql:postgresql:42.7.3'
 
   // Logging
-  implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
-  implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
-  implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
+  implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
+  implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+  implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.1'
 
   // Test frameworks
-  implementation 'junit:junit:4.13.2'
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-  testImplementation 'org.junit.platform:junit-platform-launcher:1.9.0'
-  testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
+  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.3'
+  testImplementation 'org.junit.platform:junit-platform-launcher:1.10.3'
+  testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
 }
 
 tasks.named('test') {
   useJUnitPlatform {
     excludeTags 'Exercise'
   }
-}
-
-tasks.withType(JavaCompile) {
-  options.compilerArgs += "--enable-preview"
-}
-tasks.withType(Test) {
-  jvmArgs += "--enable-preview"
-}
-tasks.withType(JavaExec) {
-  jvmArgs += "--enable-preview"
 }
 
 test {
